# bitcoin-simulation-bros

./: Cargo.toml  README.md  index.html  package-lock.json  tailwind.config.js  tailwind.css
.github/workflows/: vercel_deploy.yml  vercel_preview.yml
src/: app.rs  lib.rs  main.rs  utils.rs
src/components/: block.rs  blockchain.rs  mod.rs  navbar.rs
src/models/: block_model.rs  coin_base.rs  hashing_model.rs  mod.rs  transaction.rs
src/pages/: block_chain.rs  block_page.rs  home.rs  mod.rs
